syntax ='proto3';

package common;

message Packet{
    uint32 handlerId=1;     //핸들러id
    string userId=2;        //유저id
    string clientVersion=3; //클라언트버전
    uint32 sequence=4;      //유저의 호출수
    bytes payload=5;        //실제 데이터
}